--- a/produktliste.html
+++ b/produktliste.html
@@ -13,46 +13,97 @@
         <h1>Produkter</h1>
     </header>
     <main>
+        <div class="header">
+            <ul>
+                <li><a href="index.html">/ Forside </a></li>
+                <li><a href="kategori.html"> / Kategori </a></li>
+                <li><a href="produktliste.html"> / Produkter /</a></li>
+            </ul>
+
+        </div>
         <div class="produkter">
             <article>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="taske"></a>
-                <p>Big Cat Backpack Black</p>
+                <div class="heart">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <div class="sale">
+                    <img src="sale.webp" alt="sale">
+                </div>
+                <a href="produkt.html"><img class="product-image"
+                        src="https://kea-alt-del.dk/t7/images/webp/1000/1525.webp" alt="taske"></a>
+                <p>Deck Navy Blue Backpack </p>
             </article>
             <article>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1163.webp" alt="taske"></a>
-                <p>Sahara Team India Fanwear Round Neck Jersey</p>
+                <div class="heart">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1541.webp" alt="taske"></a>
+                <p>Ballistic Spike hite Green Shoe </p>
             </article>
             <article>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1525.webp" alt="taske"></a>
-                <p>Deck Navy Blue Backpack</p>
+                <div class="heart">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1545.webp" alt="taske"></a>
+                <p>Speed Cat Shoe</p>
             </article>
             <article>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1528.webp" alt="taske"></a>
-                <p>Deck Navy Blue Backpack</p>
+                <div class="heart">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1551.webp" alt="taske"></a>
+                <p>Power Cat Trainer-OB Football </p>
             </article>
             <article>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1531.webp" alt="taske"></a>
-                <p>Grey Solid Round Neck T-Shirt</p>
+                <div class="heart">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <div class="sale">
+                    <img src="sale.webp" alt="sale">
+                </div>
+                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1554.webp" alt="taske"></a>
+                <p>Blue Sipper</p>
             </article>
             <article>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1529.webp" alt="taske"></a>
-                <p>tee-shirt red</p>
+                <div class="heart">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1556.webp" alt="taske"></a>
+                <p>Forclaz Large Backpack - 50 ltr Orange </p>
             </article>
             <article>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1164.webp" alt="taske"></a>
-                <p>Blue T20 Indian Cricket Jersey</p>
+                <div class="heart">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <div class="sale">
+                    <img src="sale.webp" alt="sale">
+                </div>
+                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1565.webp" alt="taske"></a>
+                <p>Green Light Backpack </p>
             </article>
             <article>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1165.webp" alt="taske"></a>
-                <p>Mean Team India Cricket Jersey</p>
+                <div class="heart">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1559.webp" alt="taske"></a>
+                <p>Blue Light Backpack </p>
             </article>
             <article>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1530.webp" alt="taske"></a>
-                <p>Track Jacket</p>
+                <div class="heart">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1535.webp" alt="taske"></a>
+                <p>Unisex Logo Cap</p>
             </article>
             <article>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1532.webp" alt="taske"></a>
-                <p>Grey Leaping Cat T-shirt</p>
+                <div class="heart">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <div class="sale">
+                    <img src="sale.webp" alt="sale">
+                </div>
+                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1577.webp" alt="taske"></a>
+                <p>Slim Shady Cap</p>
             </article>
 
         </div>
