--- a/kategori.html
+++ b/kategori.html
@@ -13,6 +13,14 @@
         <h1>Sophia's fashion brand</h1>
     </header>
     <main>
+        <div class="header">
+            <ul>
+                <li><a href="index.html">/ Forside </a></li>
+                <li><a href="kategori.html"> / Kategori </a></li>
+                <li><a href="produktliste.html"> / Produkter /</a></li>
+            </ul>
+
+        </div>
         <div class="liste">
 
             <ul>
