--- a/produkt.html
+++ b/produkt.html
@@ -9,17 +9,42 @@
 </head>
 
 <body class="produkt">
-    <header>
-        <nav></nav>
-    </header>
+
     <main>
+        <div class="header">
+            <ul>
+                <li><a href="index.html">/ Forside </a></li>
+                <li><a href="kategori.html"> / Kategori </a></li>
+                <li><a href="produktliste.html"> / Produkter /</a></li>
+            </ul>
+
+        </div>
         <article class="produkt_1">
             <div>
-                <img src="https://kea-alt-del.dk/t7/images/webp/1000/1163.webp" alt="trøje">
+                <div class="heart_2">
+                    <img src="hjerte.png" alt="like">
+                </div>
+                <img class="product-image" src="https://kea-alt-del.dk/t7/images/webp/1000/1163.webp" alt="trøje">
+
             </div>
             <div>
                 <h2>Sahara Team India Fanwear <br>Round Neck Jersey</h2>
-                <div class="price">Price: 895,-</div>
+                <div class="produkt_info">
+
+                    <div>
+                        <h3>Color: Blue</h3>
+                    </div>
+                    <div>
+                        <h3>Inventory: 1163</h3>
+                    </div>
+                    <div>
+                        <h3>Brand: Nike</h3>
+                    </div>
+                    <div>
+                        <h3>Price: 895,-</h3>
+                    </div>
+                </div>
+
             </div>
         </article>
     </main>
