--- a/kategori.html
+++ b/kategori.html
@@ -22,17 +22,19 @@
 
         </div>
         <div class="liste">
+            <article>
+                <ul>
+                    <li><a href="produktliste.html">Sommer</a></li>
+                    <li><a href="produktliste.html">Forår</a></li>
+                    <li><a href="produktliste.html">Efterår</a></li>
+                    <li><a href="produktliste.html">Vinter</a></li>
+                </ul>
+            </article>
+        </div>
 
-            <ul>
-                <li><a href="produktliste.html">Sommer</a></li>
-                <li><a href="produktliste.html">Forår</a></li>
-                <li><a href="produktliste.html">Efterår</a></li>
-                <li><a href="produktliste.html">Vinter</a></li>
-            </ul>
-        </div>
-        </div>
     </main>
 
+    <script src="kategori.html"></script>
 
 
 </body>
