--- a/produkt.html
+++ b/produkt.html
@@ -19,36 +19,29 @@
             </ul>
 
         </div>
-        <article class="produkt_1">
-            <div>
-                <div class="heart_2">
-                    <img src="hjerte.png" alt="like">
+
+
+        <article class="singleproduct">
+            <h2 class="h2_product"></h2>
+            <div class="singleproduct_2">
+                <div>
+                    <img src="" alt="">
                 </div>
-                <img class="product-image" src="https://kea-alt-del.dk/t7/images/webp/1000/1163.webp" alt="trøje">
-
-            </div>
-            <div>
-                <h2>Sahara Team India Fanwear <br>Round Neck Jersey</h2>
-                <div class="produkt_info">
-
-                    <div>
-                        <h3>Color: Blue</h3>
-                    </div>
-                    <div>
-                        <h3>Inventory: 1163</h3>
-                    </div>
-                    <div>
-                        <h3>Brand: Nike</h3>
-                    </div>
-                    <div>
-                        <h3>Price: 895,-</h3>
-                    </div>
+                <div>
+                    <h3 class="newProductId">
+                        Product id: <span></span>
+                    </h3>
+                    <h3 class="price">Price: <span></span> kr,-</h3>
+                    <h3 class="discount">Discount <span></span>%</h3>
+                    <p class="soldOut">
+                    <div class="soldout_css">Udsolgt</div>
+                    </p>
                 </div>
-
             </div>
         </article>
-    </main>
 
+    </main>
+    <script src="product.js"></script>
 </body>
 
 </html>
