--- a/produktliste.html
+++ b/produktliste.html
@@ -12,106 +12,38 @@
     <header class="mainNav">
         <h1>Produkter</h1>
     </header>
-    <main>
-        <div class="header">
-            <ul>
-                <li><a href="index.html">/ Forside </a></li>
-                <li><a href="kategori.html"> / Kategori </a></li>
-                <li><a href="produktliste.html"> / Produkter /</a></li>
-            </ul>
 
-        </div>
-        <div class="produkter">
-            <article>
-                <div class="heart">
-                    <img src="hjerte.png" alt="like">
-                </div>
-                <div class="sale">
-                    <img src="sale.webp" alt="sale">
-                </div>
-                <a href="produkt.html"><img class="product-image"
-                        src="https://kea-alt-del.dk/t7/images/webp/1000/1525.webp" alt="taske"></a>
-                <p>Deck Navy Blue Backpack </p>
-            </article>
-            <article>
-                <div class="heart">
-                    <img src="hjerte.png" alt="like">
-                </div>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1541.webp" alt="taske"></a>
-                <p>Ballistic Spike hite Green Shoe </p>
-            </article>
-            <article>
-                <div class="heart">
-                    <img src="hjerte.png" alt="like">
-                </div>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1545.webp" alt="taske"></a>
-                <p>Speed Cat Shoe</p>
-            </article>
-            <article>
-                <div class="heart">
-                    <img src="hjerte.png" alt="like">
-                </div>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1551.webp" alt="taske"></a>
-                <p>Power Cat Trainer-OB Football </p>
-            </article>
-            <article>
-                <div class="heart">
-                    <img src="hjerte.png" alt="like">
-                </div>
-                <div class="sale">
-                    <img src="sale.webp" alt="sale">
-                </div>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1554.webp" alt="taske"></a>
-                <p>Blue Sipper</p>
-            </article>
-            <article>
-                <div class="heart">
-                    <img src="hjerte.png" alt="like">
-                </div>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1556.webp" alt="taske"></a>
-                <p>Forclaz Large Backpack - 50 ltr Orange </p>
-            </article>
-            <article>
-                <div class="heart">
-                    <img src="hjerte.png" alt="like">
-                </div>
-                <div class="sale">
-                    <img src="sale.webp" alt="sale">
-                </div>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1565.webp" alt="taske"></a>
-                <p>Green Light Backpack </p>
-            </article>
-            <article>
-                <div class="heart">
-                    <img src="hjerte.png" alt="like">
-                </div>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1559.webp" alt="taske"></a>
-                <p>Blue Light Backpack </p>
-            </article>
-            <article>
-                <div class="heart">
-                    <img src="hjerte.png" alt="like">
-                </div>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1535.webp" alt="taske"></a>
-                <p>Unisex Logo Cap</p>
-            </article>
-            <article>
-                <div class="heart">
-                    <img src="hjerte.png" alt="like">
-                </div>
-                <div class="sale">
-                    <img src="sale.webp" alt="sale">
-                </div>
-                <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/1000/1577.webp" alt="taske"></a>
-                <p>Slim Shady Cap</p>
-            </article>
+    <div class="header">
+        <ul>
+            <li><a href="index.html">/ Forside </a></li>
+            <li><a href="kategori.html"> / Kategori </a></li>
+            <li><a href="produktliste.html"> / Produkter /</a></li>
+        </ul>
 
-        </div>
+    </div>
 
+    <main class="main">
 
+        <template id="smallProductTemplate">
+            <article class="smallProduct">
+
+                <h3></h3>
+                <div>
+                    <a href="produkt.html"><img class="img" src="https://kea-alt-del.dk/t7/images/webp/1000/1163.webp"
+                            alt="taske"></a>
+                </div>
+                <p class="subtle"><span class="span_1"></span><span class="span_2"></span></p>
+                <p class="product_price"> <span></span> kr,-</p>
+                <img src="" alt="" class="soldOut">
+            </article>
+        </template>
     </main>
 
 
+
+
+
+    <script src="javascript.js"></script>
 
 </body>
 
