--- a/kategori.html
+++ b/kategori.html
@@ -12,29 +12,36 @@
     <header class="mainNav">
         <h1>Sophia's fashion brand</h1>
     </header>
-    <main>
-        <div class="header">
-            <ul>
-                <li><a href="index.html">/ Forside </a></li>
-                <li><a href="kategori.html"> / Kategori </a></li>
-                <li><a href="produktliste.html"> / Produkter /</a></li>
-            </ul>
 
-        </div>
-        <div class="liste">
-            <article>
-                <ul>
-                    <li><a href="produktliste.html">Sommer</a></li>
-                    <li><a href="produktliste.html">Forår</a></li>
-                    <li><a href="produktliste.html">Efterår</a></li>
-                    <li><a href="produktliste.html">Vinter</a></li>
-                </ul>
-            </article>
-        </div>
+    <div class="header">
+        <ul>
+            <li><a href="index.html">/ Forside </a></li>
+            <li><a href="kategori.html"> / Kategori </a></li>
+            <li><a href="produktliste.html"> / Produkter /</a></li>
+        </ul>
 
-    </main>
+    </div>
 
-    <script src="kategori.html"></script>
+    <div class="liste">
+        <section class="letterGroup">
+            <ul></ul>
+            <template>
+                <li class="kategori_liste"><a href="produktliste.html"></a></li>
+            </template>
+
+        </section>
+    </div>
+    <!--
+            <li><a href="produktliste.html">Forår</a></li>
+                <li><a href="produktliste.html">Efterår</a></li>
+                <li><a href="produktliste.html">Vinter</a></li> -->
+
+
+
+
+
+
+    <script src="kategori.js"></script>
 
 
 </body>
