--- a/produktliste.html
+++ b/produktliste.html
@@ -27,11 +27,12 @@
         <template id="smallProductTemplate">
             <article class="smallProduct">
 
-                <h3></h3>
+
                 <div>
                     <a href="produkt.html"><img class="img" src="https://kea-alt-del.dk/t7/images/webp/1000/1163.webp"
                             alt="taske"></a>
                 </div>
+                <h3></h3>
                 <p class="subtle"><span class="span_1"></span><span class="span_2"></span></p>
                 <p class="product_price"> <span></span> kr,-</p>
                 <img src="" alt="" class="soldOut">
@@ -43,7 +44,7 @@
 
 
 
-    <script src="javascript.js"></script>
+    <script src="productliste.js"></script>
 
 </body>
 
