--- a/produkt.html
+++ b/produkt.html
@@ -32,9 +32,8 @@
                         Product id: <span></span>
                     </h3>
                     <h3 class="price">Price: <span></span> kr,-</h3>
-                    <h3 class="discount">Discount <span></span>%</h3>
                     <p class="soldOut">
-                    <div class="soldout_css">Udsolgt</div>
+                        <span class="soldout_css">Udsolgt</span>
                     </p>
                 </div>
             </div>
