--- a/produktliste.html
+++ b/produktliste.html
@@ -28,13 +28,15 @@
             <article class="smallProduct">
 
 
-                <div>
-                    <a href="produkt.html"><img class="img" src="https://kea-alt-del.dk/t7/images/webp/1000/1163.webp"
-                            alt="taske"></a>
-                </div>
+                <a class="onDiscount" href="produkt.html"><img class="img"
+                        src="https://kea-alt-del.dk/t7/images/webp/1000/1163.webp" alt="taske"></a>
+
                 <h3></h3>
+                <p class="sale">
+                    <span></span> Off
+                </p>
                 <p class="subtle"><span class="span_1"></span><span class="span_2"></span></p>
-                <p class="product_price"> <span></span> kr,-</p>
+                <p class="product_price"> Price: <span></span> kr,-</p>
                 <img src="" alt="" class="soldOut">
             </article>
         </template>
